# Data-Manipulator

./: LICENSE  README.md  pyproject.toml
src/: cli.py  main.py  notation_reference.py  paths.py  pipeline.py  pitch_map.py  transform.py
src/input/: file-select.mxl
src/middle_man/: middle_man.py
src/output/: file-select_out.musicxml
src/receiver/: receiver.py
src/sender/: sender.py
